# rat-bot

./: Cargo.toml
src/: main.rs
src/commands/: quote.rs
