[package]
name = "rat-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
error-chain = "0.12.4"
fastrand = "1.9.0"
regex = "1.7.1"
reqwest = "0.11.14"
serenity = "0.11.5"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
